@@ -2,8 +2,10 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.38 [20140105] [svn: r541]
+Changelog for sg3_utils-1.38 [20140106] [svn: r542]
   - sg_ses: add --dev-slot-num= and --sas-addr=
+    - fix --data=- problem with large buffers
+    - new --data=@FN to read hex data from file FN
     - error and warning message cleanup
     - add --maxlen= option
   - sg_inq: add --block=0|1 option to control opens
